# ticket_engine

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
changelog/: index.html
conduct/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  explanation.md  index.md  limitations.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
limitations/: index.html
reference/: index.html
src/ticket_engine/: __init__.py  ticket_engine.py  ticket_issue.py
tests/: test_test_engine.py
ticket_engine/: __init__.py  engine.py  issue.py  ticket_engine.py  ticket_issue.py
tutorials/: index.html
