[tool.poetry]
name = "ticket_engine"
version = "0.1.2"
description = "A package for supporting IT desks in solving their tickets"
authors = ["Lukas A"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
statistics = "^1.0.3.5"
aleph_alpha_client = "^7.0.1"
gradio = "^4.19.2"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
